--- a/trading_cards.html
+++ b/trading_cards.html
@@ -636,6 +636,9 @@
     <div class="card">
       <img src="images/techno_blaze.webp" alt="Techno Blaze" />
       <h2>Techno Blaze</h2>
+      <div class="notice">
+        <p>Unclear either way. Tie goes to hero?</p>
+      </div>
       <p>
         <strong>Description:</strong> Fights crime with gadgets cooler than your
         smartphone. His tech arsenal makes him a formidable opponent against
@@ -651,6 +654,9 @@
     <div class="card">
       <img src="images/titaness.webp" alt="Titaness" />
       <h2>Titaness</h2>
+      <div class="notice">
+        <p>Unclear either way. Tie goes to hero?</p>
+      </div>
       <p>
         <strong>Description:</strong> Stronger than your gym's strongest member
         on their best day. Uses her power for good lifting spirits and heavy
